BUG: COMPANY SIDEBAR: Edit pencils are now always visible, ugly

--- a/app/stylesheets/_sidebar.scss
+++ b/app/stylesheets/_sidebar.scss
@@ -84,7 +84,6 @@
     border-bottom: 0px;
     padding-bottom: 0;
     margin-bottom: 10px;
-    margin-top: 20px;
   }
 
   .sidebar-panel-content.custom-field {
