--- a/app/stylesheets/forms/_single_lead.scss
+++ b/app/stylesheets/forms/_single_lead.scss
@@ -252,7 +252,6 @@
 .form h2 {
   font-size: 18px;
   line-height: 24px;
-  margin-left: -14px;
 }
 
 .form #assign {
