--- a/app/stylesheets/routes/_company.scss
+++ b/app/stylesheets/routes/_company.scss
@@ -250,8 +250,6 @@
 
   .sidebar {
     top: 135px;
-    left: 22px;
-    width: 268px;
   }
   .main-content {
     margin-top: 70px;
